--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "script.js",
   "scripts": {
     "start": "node script.js",
+    "server": "nodemon script.js",
+    "client": "yarn --cwd client start",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku": "npm install --prefix client && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.11",
